# versionamento_poetry

./: README.md  pyproject.toml
notebooks/: projeto_ds.ipynb
