[tool.poetry]
name = "versionamento-poetry"
version = "0.1.0"
description = ""
authors = ["JoaoDavidMadureira <joaodavidmadureira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
